# habiter

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  hab.py  habiter.py  habiter_cli.py  habiter_math.py  pypi_test.sh  setup.cfg  setup.py  updater.py
.devcontainer/: devcontainer.json
.github/workflows/: build_run.yml  ci.yml
habiter/: __init__.py  cli.py  math.py  run.py
habiter/api/: export.py
habiter/commands/: __init__.py  habiter.py
habiter/data/: __init__.py  trace.txt
habiter/internal/: cli.py  habiter.py  math.py  run.py
habiter/internal/commands/: _utils.py  add.py  list.py  remove.py  reset.py  tally.py  utils.py
habiter/internal/file/: creator.py  operations.py  updater.py
habiter/internal/upkeep/: updater.py
habiter/internal/utils/: consts.py  messenger.py
habiter/upkeep/: maintainer.py  updater.py
habiter/utils/: constants.py  messenger.py
test/: conftest.py  test_add.py  test_list.py  test_remove.py  test_reset.py  test_tally.py
test/internal/commands/: test_commands.py
