[metadata]
name = habiter
version = attr: habiter.__version__
author = Kemal Zebari
url = https://github.com/kemzeb/habiter
description = Quantifiy and keep tabs on habits.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = productivity, cli
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
setup_requires =
    wheel
install_requires =
    click>=8.1.3
    platformdirs>=3.2.0

[options.packages.find]
exclude =
    test
    test.*

[options.entry_points]
console_scripts =
    habiter = habiter.internal.run:main
