[metadata]
name = habiter
version = attr: habiter.__version__
author = Kemal Zebari
url = https://github.com/kemzeb/habiter
description = Quantifiy and keep tabs on habits.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = productivity, cli
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
setup_requires =
    wheel
install_requires =
    click>=8.1.3
    platformdirs>=3.2.0

[options.extras_require]
style =
    black>=23.3.0
    flake8>=6.0.0
    isort>=5.12.0
dev =
    habiter[style]
    pytest>=7.2.2
    twine>=4.0.2

[options.packages.find]
exclude =
    test
    test.*

[options.entry_points]
console_scripts =
    habiter = habiter.internal.run:main

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#id2
[flake8]
max-line-length = 88
extend-ignore = E203

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[isort]
profile = black
